# ripken

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py
backend/analytics/: alerts.py  category_value.py  matchup.py  prospect_signals.py  reliever_roles.py  start_sit.py  waiver_wire.py
backend/api/: dependencies.py
backend/api/routes/: alerts.py  auth.py  bullpen.py  dashboard.py  league.py  lineups.py  matchup.py  pitching.py  prospects.py  roster.py  team_analysis.py  waivers.py
backend/database/: connection.py  models.py
backend/ingestion/: fangraphs.py  mlb_stats.py  mlb_stats_api.py  player_id_crosswalk.py  prospect_buzz.py  savant.py  scheduler.py
backend/tests/: test_category_value.py
backend/yahoo/: auth.py  client.py  player_mapping.py  sync.py
data/projections/: batting.csv  pitching.csv
docs/: BLUEPRINT.md  DEPLOY.md
docs/superpowers/plans/: 2026-03-28-bullpen-page-redesign.md  2026-03-28-category-value-grading.md  2026-03-28-league-rosters.md  2026-03-28-lineup-ingestion.md  2026-03-28-prospect-board-improvements.md  2026-03-28-vps-deployment.md  2026-03-28-waivers-page-redesign.md
docs/superpowers/specs/: 2026-03-28-bullpen-page-redesign-design.md  2026-03-28-category-value-grading-design.md  2026-03-28-league-rosters-design.md  2026-03-28-prospect-board-improvements-design.md  2026-03-28-vps-deployment-design.md  (+1 more)
frontend/src/: middleware.ts
frontend/src/app/: page.tsx
shared/: constants.py
(+14 files in other folders)
